# ASDii

./: .gitignore  Datastructurs.md  Design.md  Directories.md  Knowledge.md  Readme.md  pyproject.toml
asdii/: __init__.py
asdii/calculators/: __init__.py  descriptors.py  solubility.py  thermal.py
asdii/core/: __init__.py  api.py  formulation.py  polymer.py  process.py
asdii/data/: test_apis.json  test_correlations.json  test_formulations.json  test_polymers.json
asdii/database/: __init__.py  material_db.py
asdii/predictors/: __init__.py  loading.py  stability.py
asdii/screening/: __init__.py  polymer_screener.py
asdii/utils/: __init__.py  file_io.py
asdii/viszalization/: __init__.py  property_viz.py
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/api/: core.rst
examples/: basic_usage.py  test_data_loader.py  test_loading_optimization.py  test_polymer_screening.py
tests/: conftest.py
tests/unit/: test_api.py  test_formulation.py
