[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asdii"
version = "0.1.0"
description = "Amorphous Solid Dispersion Intelligent Insights - a library for predicting and optimizing ASD formulations"
readme = "README.md"
authors = [
    {name = "ASDii Team", email = "info@asdii.example.com"}
]
license = {text = "CC-BY-NC-4.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Pharmaceutical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "pharmaceutical", 
    "formulation", 
    "amorphous solid dispersion", 
    "drug development", 
    "stability prediction"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "mordredcommunity>=2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.0.0",
]
ml = [
    "xgboost>=1.7.0",
    "optuna>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/example/asdii"
"Bug Tracker" = "https://github.com/example/asdii/issues"
"Documentation" = "https://asdii.readthedocs.io"

[tool.setuptools]
packages = ["asdii"]
package-dir = {"asdii" = "asdii"}
package-data = {"asdii" = [
        "data/*.json",
        "data/trained_models/*",
        "reporting/templates/*"
    ]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
